# claude-telemetry

./: .gitignore  README.md  kill_worker.py  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.cursor/: hooks.json  mcp.json
.cursor-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
hooks/claude/: hooks.json
scripts/: generate_alert_wav.py  generate_sounds.py  install.bat  install.py  install.sh  run_hook.bat  run_hook.py  run_hook.sh  start_mcp.py  validate.bat  validate.ps1  validate.py  validate.sh
skills/cloudbyte-claude-plugin-install/: SKILL.md
skills/obs/: SKILL.md
src/: __init__.py  main.py
src/app/: app.py
src/common/: __init__.py  file_io.py  logging.py  paths.py  session_registry.py  time_utils.py
src/core/: __init__.py  event_processor.py  recovery.py
src/cursor/: main.py  paths.py
src/db/: __init__.py  cleanup_duplicates.py  manager.py  migration_log.py  schema.py  writers.py
src/handlers/: __init__.py  dashboard_start.py  permission_request.py  session_end.py  session_start.py  user_prompt.py
src/integrations/: __init__.py
src/mcp/: __init__.py  memory.py  server.py
src/observations/: __init__.py  extractor.py  hook_handler.py  queue.py  queue_helper.py  writer.py
src/security/: __init__.py  config.py  db_writer.py  detector_registry.py  masker.py  pattern_builder.py  registry.py  scanner.py
src/sync/: client.py  collector.py  runner.py
src/workers/: __init__.py  kill_worker.py  llm_client.py  llm_worker.py  memory_indexer.py  (+3 more)
tests/: test_runtime_memory.py
(+159 files in other folders)
