[project]
name = "cloudbyte"
version = "0.1.0"
description = "CloudByte - Claude Code Plugin for unified memory and sync system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
    "google-genai>=1.73.1",
    "litellm>=1.83.8",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "markdown>=3.7",
    ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudbyte"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
